--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,34 @@ NetworkWeaver/BetterShrines.dll.prepatch
 MoreShrines.sln
 MoreShrines.csproj
 obj/Debug/netstandard2.0/MoreShrines.csprojAssemblyReference.cache
+bin/Debug/netstandard2.0/BepInEx.Harmony.dll
+bin/Debug/netstandard2.0/Mono.Cecil.pdb
+bin/Debug/netstandard2.0/MonoMod.RuntimeDetour.dll
+bin/Debug/netstandard2.0/Rewired_Core.dll
+bin/Debug/netstandard2.0/Rewired_CSharp.dll
+bin/Debug/netstandard2.0/Unity.Postprocessing.Runtime.dll
+bin/Debug/netstandard2.0/UnityEngine.Networking.refstub.dll
+.vs/MoreShrines/v17/.futdcache.v1
+.vs/MoreShrines/v17/.suo
+NetworkWeaver/MoreShrines.dll.prepatch
+obj/Debug/netstandard2.0/MoreShrines.csproj.AssemblyReference.cache
+obj/Debug/netstandard2.0/MoreShrines.GeneratedMSBuildEditorConfig.editorconfig
+.vs/MoreShrines/v17/Browse.VC.db-wal
+.vs/MoreShrines/v17/Browse.VC.db-shm
+.vs/MoreShrines/v17/Browse.VC.db
+.vs/MoreShrines/project-colors.json
+bin/Release/netstandard2.0/BepInEx.Harmony.dll
+bin/Release/netstandard2.0/MMHOOK_Assembly-CSharp.dll
+bin/Release/netstandard2.0/MoreShrines.deps.json
+bin/Release/netstandard2.0/MoreShrines.dll
+bin/Release/netstandard2.0/MoreShrines.pdb
+obj/Release/netstandard2.0/.NETStandard,Version=v2.0.AssemblyAttributes.cs
+obj/Release/netstandard2.0/MoreShrines.AssemblyInfo.cs
+obj/Release/netstandard2.0/MoreShrines.AssemblyInfoInputs.cache
+obj/Release/netstandard2.0/MoreShrines.assets.cache
+obj/Release/netstandard2.0/MoreShrines.csproj.CopyComplete
+obj/Release/netstandard2.0/MoreShrines.csproj.CoreCompileInputs.cache
+obj/Release/netstandard2.0/MoreShrines.csproj.FileListAbsolute.txt
+obj/Release/netstandard2.0/MoreShrines.dll
+obj/Release/netstandard2.0/MoreShrines.GeneratedMSBuildEditorConfig.editorconfig
+obj/Release/netstandard2.0/MoreShrines.pdb
